код адаптирован до работоспособного состояния. Проект успешо запустился на LG WING